--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,16 @@
 *{
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar{
+  width: 8px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #f2545f;
+  border-radius: 4px;
+}
 body {
   margin: 0;
   padding: 0;
